# IvyEngine

./: CMakeLists.txt
include/ivy/: core.h  forward.h  gfx.h  glad_loader.h  glfw_loader.h  input.h  math.h  types.h  virtual_resolution.h  window.h
include/ivy/arena/: linear.h  types.h
src/: core.c  gfx.c  glad_loader.c  glfw_loader.c  input.c  ivy.c  math.c  virtual_resolution.c  window.c
src/arena/: linear.c
